@@ -1,3 +1,8 @@
+2010-09-14  Sam Steingold  <sds@gnu.org>
+
+	* clisp-link.in: support module which have no C component:
+	build dll only if NEW_LIBS is non-empty
+
 2010-09-02  Sam Steingold  <sds@gnu.org>
 
 	* compiler.lisp (ignore-check): warn about assigned but never read vars
